<resources>
    <string name="app_name">appiplus</string>
    <string name="title_appointment_detail">Appointment Detail</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="termin">Appointment</string>
    <string name="what">What</string>
    <string name="who">Who</string>
    <string name="where">Where</string>
    <string name="description">Description</string>
    <string name="action_comment">Add comment</string>
    <string name="title_overview">Overview</string>
    <string name="title_activity_add_comment">New comment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Comment</string>
    <string name="button_send">Send</string>
    <string name="when">When</string>
    <string name="sync_appointments_on">Sync appointments on</string>
    <string name="sync_appointments_off">Sync appointments off</string>
    <string name="hours">hrs</string>
    <string name="app_name_appointments">AppiPlus - appointments</string>
    <string name="app_name_detail">Detail</string>
    <string name="app_name_comment">Comment</string>
    <string name="appointments_loading">Appointments are loading</string>
    <string name="comments_loading">Comments are loading</string>
    <string name="add_comment">Please enter a comment</string>
    <string name="search_location">Search location</string>
    <string name="no_map_found">No installed map found</string>
    <string name="warning">Warning</string>
    <string name="action_sync_to_calendar">Transmit appointment to calendar</string>
    <string name="no_calendar_found">No calendar found for synchronization</string>
    <string name="appointment_created">Appointment was transmitted to calendar</string>
    <string name="note">Note</string>
    <string name="notification">Notification from AppiPlus</string>
    <string name="title_activity_choose_calendar">ChooseCalendar</string>
    <string name="choose_calendar">Choose calendar</string>
    <string name="main_calendar">Main calendar</string>
    <string name="sign_out">Sign out</string>
    <string name="insert_comment">Inserting comment</string>
    <string name="empty_comment">Please enter a text</string>
    <string name="title_activity_handle_event">HandleEvent</string>
    <string name="trigger_sync">Sync</string>
    <string name="to_the_portal">To the website</string>
</resources>
