<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.web_crossing.www.appiplus.AppointmentListActivity">

    <item android:id="@+id/trigger_sync" android:icon="@drawable/ic_sync" android:title="@string/trigger_sync"
        android:orderInCategory="100" app:showAsAction="ifRoom" />

    <item android:id="@+id/sync_appointments" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/choose_calendar" android:title="@string/choose_calendar"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/portal" android:title="@string/to_the_portal"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/signout" android:title="@string/sign_out"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>