<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item android:id="@+id/action_comment"
        android:icon="@drawable/ic_action_chat"
        android:title="@string/action_comment"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_search_location"
        android:icon="@drawable/ic_action_location_searching"
        android:title="@string/search_location"
        app:showAsAction="ifRoom"></item>

    <item android:id="@+id/action_sync_to_calendar"
        android:icon="@drawable/ic_action_download"
        android:title="@string/action_sync_to_calendar"
        app:showAsAction="ifRoom"></item>
</menu>