<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5pt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:paddingBottom="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/what"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="true"
            tools:context=".ItemDetailFragment"
            android:text=""
            android:id="@+id/detail_title" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/when"
            android:id="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="true"
            tools:context=".ItemDetailFragment"
            android:text=""
            android:id="@+id/detail_when_start" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/who"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="true"
            tools:context=".ItemDetailFragment"
            android:text=""
            android:id="@+id/detail_club" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/where"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="true"
            tools:context=".ItemDetailFragment"
            android:text=""
            android:id="@+id/detail_where" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="true"
            tools:context=".ItemDetailFragment"
            android:text=""
            android:id="@+id/detail_city" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="5dip"
        android:textIsSelectable="true"
        tools:context=".ItemDetailFragment"
        android:text=""
        android:id="@+id/detail_description" />
</TableLayout>